cmake_minimum_required(VERSION 3.29)
project(Ejercicios_Excepciones)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ejercicio1 main.cpp)
add_executable(Ejercicio2 main2.cpp)
add_executable(Ejercicio3 main3.cpp)
add_executable(Ejercicio4 main4.cpp)
add_executable(Ejercicio5 main5.cpp)
add_executable(Ejercicio6 main6.cpp)
add_executable(Ejercicio7 main7.cpp)
